Fix jumping bg

--- a/src/css/core/_common.scss
+++ b/src/css/core/_common.scss
@@ -25,5 +25,8 @@ a {
   background-attachment: fixed;
   background-size:cover;
   background-repeat: no-repeat;
+  position: relative;
+  top: 0;
+  left: 0;
  
  }
